Prevent legend text overlapping
- As well as some minor display adjustment for MaterialDesign theme.

--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,7 @@ div#stg .lm {
 .stg_con legend {
   position: sticky;
   top: 0;
+	background-color: var(--menu-background-color);
 }
 .ie9 .stg_con {position: static}
 .stg_con table {width: 100%}
